# Kernova-TEE

./: .gitignore  .md  CMakeLists.txt  Dockerfile  EVOLUTION.md  Makefile  QUICKSTART.md  README.md  README_EN.md  README_PT.md  docker-compose.yml  linker.ld
client-cli/: README.md  main.py
client-web/: README.md  app.py  requirements.txt
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  INSTRUCTIONS.md
include/: avx_macros.inc  registers.hpp  vmx_defs.inc
infra/: Dockerfile  compose.yaml
interface/: README.md  cli.py  web.py
scripts/: build.sh  docker-entrypoint.sh  kernel-build.sh  kernel-load.sh  kernel-unload.sh  test.sh
service-api/service-cpp/: CMakeLists.txt  Makefile  README.md
service-api/service-cpp/include/: registers.hpp
service-api/service-cpp/include/virtualization/: amd_svm.hpp  cpu_features.hpp  hypervisor_backend.hpp
service-api/service-cpp/src/: main.cpp  vmx_stubs.cpp
service-api/service-cpp/src/marshall/: simd_packer.asm
service-api/service-cpp/src/monitor/: intercept.asm  trace_engine.asm
service-api/service-cpp/src/virtualization/: cpu_features.cpp  hypervisor_backend.cpp
service-api/service-cpp/src/virtualization/amd_svm/: amd_svm.cpp
service-api/service-cpp/tests/: CMakeLists.txt  test_amd_svm.cpp  test_backend.cpp  test_integrity.cpp  test_performance.cpp  test_simd.cpp
service-kernel/linux/: Makefile  README.md  kernova_main.c
service-kernel/linux/amd_svm/: amd_svm.c
service-kernel/linux/include/: kernova_kernel.h
service-kernel/linux/intel_vmx/: intel_vmx.c
shared/: kernova_abi.h
src/: main.cpp
src/boot/: entry.asm
src/core/: vmcs_config.asm  vmx_init.asm
src/marshall/: simd_packer.asm
src/monitor/: intercept.asm  trace_engine.asm
tests/: CMakeLists.txt  test_vmcs.cpp
